--- a/styles/style.css
+++ b/styles/style.css
@@ -22,13 +22,10 @@ body {
 .landing-page {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 .left {
-  background-image: url('../sources/image/wolf.jpg');
-  background-size: cover;
-  background-position: center;
   padding: 0;
   margin: 0;
 }
@@ -39,13 +36,14 @@ body {
   justify-content: center;
   display: flex;
   flex-direction:column;
-  /* min-height: 100vh; */
+  min-height: 100vh;
 }
 .owl {
   width: 50vw;
 }
 .owl img {
-  height: 99vh;
+  height: 100vh;
+  object-fit: fill;
 }
 
 .heading {
